Fix: Media page was clipped on TV layout

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -869,3 +869,8 @@ div[data-role=controlgroup] a.ui-btn-active {
     width: 98% !important;
     max-width: 27rem !important;
 }
+
+.layout-tv .itemBackdrop {
+    display: block;
+    height: 13vh;
+}
